--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <p>I'm a really awesome llama. Every day I wake up, munch on some grass, do some coding and then go back to sleep.</p>
                     <h3>Achievements</h3>
                     <ul>
-                        <li>Bachelor of photogenic posing, 2010</li>
-                        <li>Llamaness certification from the Llama Institute, 2014</li>
-                        <li>I coded a website, 2017</li>
+                        <li>Tufts University 2022</li>
+                        <li>Seattle Academy 2018</li>
+                        <li>I coded a website, 2019</li>
                     </ul>
                 </div>
             </section>
