--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section id="hero">
                 <div class="section-inner">
                     <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
-                    <h1>Hi, I'm Gabby Borenstein</h1>
+                    <h1>Hi, I'm Gabby Borenstein.</h1>
                 </div>
             </section>
             <section id="about">
