--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
         </main>
         <footer>
-            © Copyright Boberick The Llama, 2017
+            © Copyright Gabby Borenstein, 2019
         </footer>
     </body>
 </html>
