--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <img src="https://codetheweb.blog/assets/img/posts/steps-to-creating-a-website/llama.jpg" class="profile-img">
+            <img src="profile pic.jpg" class="profile-img">
             <nav>
                 <ul>
                     <li><a href="#hero">Home</a></li>
